--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,5 +22,4 @@ tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-sysinfo = "0.32"
-
+regex = "1"
