--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,11 +79,24 @@ jobs:
           src-tauri/target/${{ matrix.arch }}-apple-darwin/release/bundle/dmg/*.dmg
           src-tauri/target/${{ matrix.arch }}-apple-darwin/release/bundle/macos/*.app
 
+  release:
+    if: github.event_name == 'release'
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    
+    steps:
+    - name: Download artifacts
+      uses: actions/download-artifact@v4
+      with:
+        pattern: soundbreak-*
+        merge-multiple: true
+
     - name: Upload to release
-      if: github.event_name == 'release'
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          src-tauri/target/${{ matrix.arch }}-apple-darwin/release/bundle/dmg/*.dmg
+          *.dmg
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
