--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,10 +19,12 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
-tauri-plugin-opener = "2"
+tauri-plugin-opener = "2.2.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 regex = "1"
-tauri-plugin-autostart = "2.4.0"
+tauri-plugin-autostart = "2.5.0"
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-single-instance = "2.2.0"
 dirs = "5.0"
 tokio = { version = "1", features = ["fs"] }
